<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity_1">

    <TextView
        android:text="@string/login1"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <RadioButton
            android:id="@+id/radio_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radio_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:layout_marginStart="16dp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radio_security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security"
            android:layout_marginStart="16dp"
            android:textStyle="bold"/>
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/anchor"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:textColor="@color/Blue"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:focusable="true" />


</LinearLayout>