<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminActivity_1">

    <include layout="@layout/activity_main" />

    <Button
        android:id="@+id/btn_available"
        android:text="@string/number_of_bi_cycles_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/Aqua"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp" />

    <Button
        android:id="@+id/btn_damaged"
        android:text="@string/number_of_bi_cycles_are_damaged"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="450dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/Aqua"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp" />

    <Button
        android:id="@+id/btn_usage"
        android:text="@string/number_of_bi_cycles_are_in_use"
        android:layout_below="@+id/btn_damaged"
        android:textColor="@color/black"
        android:backgroundTint="@color/Aqua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="300dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_upload"
        android:text="@string/selectfile"
        android:layout_below="@+id/btn_usage"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/Grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/selectedFileTextView"
        android:text="@string/no_file_selected"
        android:layout_below="@+id/btn_upload"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
