<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SecurityActivity_1">


    <include layout="@layout/activity_main" />

    <Button
        android:id="@+id/btn_available"
        android:text="@string/number_of_bi_cycles_available"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="400dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/Aqua"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_status"
        android:text="@string/check_status"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:layout_below="@+id/btn_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/Aqua"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_add"
        android:text="@string/add_bi_cycles"
        android:layout_below="@+id/btn_status"
        android:layout_marginTop="100dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="right"
        android:textColor="@color/black"
        android:backgroundTint="@color/Grey"
        tools:ignore="RtlHardcoded"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_uploadList"
        android:text="@string/upload_list"
        android:layout_below="@+id/btn_add"
        android:layout_marginTop="200dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/Grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/selectedFileTextView"
        android:text="@string/no_file_selected"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_below="@+id/btn_uploadList"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
