<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AvailabilityActivity_1">

    <include layout="@layout/activity_main" />

    <TextView
        android:id="@+id/textavailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_bi_cycles_available_presently"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_request1"
        android:text="@string/request"
        android:layout_below="@+id/textavailable"
        android:textColor="@color/black"
        android:backgroundTint="@color/Aqua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_notify"
        android:text="@string/notify"
        android:layout_below="@+id/btn_request1"
        android:textColor="@color/black"
        android:backgroundTint="@color/Aqua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toTopOf="@+id/btn_request1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>