<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmployeeActivity_1">

    <include layout="@layout/activity_main" />

    <Button
        android:id="@+id/btn_available"
        android:text="@string/number_of_bi_cycles_available"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="400dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="@color/Aqua"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_request"
        android:text="@string/request_bi_cycle"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="250dp"
        android:layout_below="@+id/btn_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/Aqua"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_return"
        android:text="@string/return_bi_cycle"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_request"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/Aqua"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>